--- a/website/templates/linkedin.html
+++ b/website/templates/linkedin.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="static/linkedin-css/linkedin-header.css">
     <link rel="stylesheet" href="static/linkedin-css/linkedin-left-part.css">
     <link rel="stylesheet" href="static/linkedin-css/linkedin-right-part.css">
+    <link rel="stylesheet" href="static/cv.css">
 
 
 </head>
@@ -268,11 +269,299 @@
                     <div class="show-all-activity-text">
                         Show all activity 	&#129046;
                     </div>
-
-
-
+                </div>
+                <div class="left-part6">
+                    <div class="analytics-text">
+                        Experience
+                    </div>
+                    <div class="my-network">
+                      <img class="youtube-icon" src="static/linkedin-images/left-part-images/youtube-logo.png">
+                      <div class="my-network-together">
+                        <div class="youtube-text">
+                          Youtube account manager/video editor
+                        </div>
+                        <div class="my-network-description">
+                            YouTube &#183; Self-employed
+                        </div>
+                        <div class="youtube-job-duration">
+                            Jul 2016 - Present &#183; 6 yrs 6 mos
+                        </div>
+                        <div class="job-description">
+                            Side job to pay off Mechanical Engineering studies - "The BallGame"                        </div>
+                      </div>
+                    </div>
+                    <div class="my-network">
+                      <img class="youtube-icon" src="static/linkedin-images/left-part-images/tech387-icon.png">
+                      <div class="my-network-together">
+                        <div class="youtube-text">
+                          Python/Flask Backend Developer
+                        </div>
+                        <div class="my-network-description">
+                            Tech387 &#183; Internship
+                        </div>
+                        <div class="youtube-job-duration">
+                            Nov 2022 - Dec 2022 &#183; 2 mos
+                        </div>
+                        <div class="youtube-job-duration">
+                            Sarajevo, Federation of Bosnia and Herzegovina, Bosnia and Herzegovina &#183; Remote
+                        </div>
+                        <div class="job-description">
+                            Tech 387 Product Arena - Python/Flask Backend Developer 2 weeks online training for web-design.
+                        </div>
+                        <div class="skills-description">
+                            <strong>Skills: </strong> Python (Programming Language) &#183; Flask &#183; HTML &#183; Cascading Style Sheets (CSS)
+                        </div>
+                      </div>
+                    </div>
+                    <div class="my-network">
+                      <img class="youtube-icon" src="static/linkedin-images/left-part-images/company-logo.png">
+                      <div class="my-network-together">
+                        <div class="youtube-text">
+                          Mechanical Engineer
+                        </div>
+                        <div class="my-network-description">
+                            TTU energetik d.o.o &#183; Internship
+                        </div>
+                        <div class="youtube-job-duration">
+                            Jul 2022 &#183; 1 mo
+                        </div>
+                        <div class="youtube-job-duration">
+                            Tuzla, Federation of Bosnia and Herzegovina, Bosnia and Herzegovina &#183; On-site
+                        </div>
+                        <div class="job-description">
+                            Creating a sketch of random parts and making 3d models of them in Solidworks with full documentation. Going through the full production process for multiple parts and also learning about different types of standards and regulations that Mechanical engineers need to follow.
+                        </div>
+                        <div class="skills-description">
+                            <strong>Skills: </strong> Technical Documentation &#183; SOLIDWORKS &#183; Computer-Aided Design (CAD)
+                        </div>
+                      </div>
+                    </div>
+                    <div class="my-network">
+                      <img class="youtube-icon" src="static/linkedin-images/left-part-images/company-logo.png">
+                      <div class="my-network-together">
+                        <div class="youtube-text">
+                          Assistant To The Mechanical Engineer
+                        </div>
+                        <div class="my-network-description">
+                            CNC HST Technik
+                        </div>
+                        <div class="youtube-job-duration">
+                            Jun 2016 - Aug 2016 &#183; 3 mos
+                        </div>
+                        <div class="youtube-job-duration">
+                            Gračanica, Federation of Bosnia and Herzegovina, Bosnia and Herzegovina
+                        </div>
+                        <div class="job-description">
+                            Assisting the Mechanical engineer in his ordinary work and gaining much needed experience in that field
+                        </div>
+                      </div>
+                    </div>
 
                 </div>
+                <div class="left-part7">
+                    <div class="analytics-text">
+                        Education
+                    </div>
+                    <div class="my-network">
+                      <img class="youtube-icon" src="static/linkedin-images/left-part-images/university-logo.png">
+                      <div class="my-network-together">
+                        <div class="youtube-text">
+                          Univerzitet u Tuzli
+                        </div>
+                        <div class="my-network-description">
+                            Industrial Engineering
+                        </div>
+                        <div class="youtube-job-duration">
+                            2016-2021
+                        </div>
+                      </div>
+                    </div>
+                </div>
+                <div class="left-part8">
+                    <div class="analytics-text">
+                        Licenses & certifications
+                    </div>
+                    <div class="my-network">
+                      <img class="youtube-icon" src="static/linkedin-images/left-part-images/dkr-icon.png">
+                      <div class="my-network-together">
+                        <div class="youtube-text">
+                          ABB Robot Programming Basic
+                        </div>
+                        <div class="my-network-description">
+                            DKR – German Center for Robotics
+                        </div>
+                        <div class="youtube-job-duration">
+                            Issued Apr 2022 &#183; No Expiration Date
+                        </div>
+                        <div class="youtube-job-duration">
+                            Credential ID 48-ABB/VL-2022
+                        </div>
+                      </div>
+                    </div>
+                </div>
+                <div class="left-part8">
+                    <div class="analytics-text">
+                        Volunteering
+                    </div>
+                    <div class="my-network">
+                      <img class="youtube-icon" src="static/linkedin-images/left-part-images/fls-icon.png">
+                      <div class="my-network-together">
+                        <div class="youtube-text">
+                          Student Volunteer
+                        </div>
+                        <div class="my-network-description">
+                            Futures Leaders Summit
+                        </div>
+                        <div class="youtube-job-duration">
+                            Dec 2021 &#183; 1 mo
+                        </div>
+                        <div class="youtube-job-duration">
+                            Science and Technology
+                        </div>
+                      </div>
+                    </div>
+                </div>
+                <div class="left-part9">
+                    <div class="expand">
+                    <div class="activity-and-button">
+                        <input class="box" type="checkbox" id="trigger"/>
+                        <label for="trigger" >Skills</label>
+                                <button class="demonstrate-button">
+                                    <div class="start-a-post-text">Demonstrate skills</div>
+                                </button>
+                    </div>
+                            <div class="below-activity-title">
+                                Engineering
+                            </div>
+                            <div class="endorsement-row">
+                                <img class="endorsement-icon" src="static/linkedin-images/left-part-images/network-icon.png">
+                                <div class="endorsement">
+                                     1 endorsement
+                                </div>
+                            </div>
+                            <div class="below-activity-title">
+                                Research
+                            </div>
+                            <div class="endorsement-row">
+                                <img class="endorsement-icon" src="static/linkedin-images/left-part-images/network-icon.png">
+                                <div class="endorsement">
+                                     1 endorsement
+                                </div>
+                            </div>
+                            <div class="below-activity-title">
+                                AutoCAD
+                            </div>
+                            <div class="endorsement-row">
+                                <img class="endorsement-icon" src="static/linkedin-images/left-part-images/network-icon.png">
+                                <div class="endorsement">
+                                     1 endorsement
+                                </div>
+                            </div>
+                            <div class="below-activity-title">
+                                SOLIDWORKS
+                            </div>
+                            <div class="endorsement-row">
+                                <img class="endorsement-icon" src="static/linkedin-images/left-part-images/network-icon.png">
+                                <div class="endorsement">
+                                     1 endorsement
+                                </div>
+                            </div>
+                            <div class="below-activity-title">
+                                CATIA
+                            </div>
+                            <div class="endorsement-row">
+                                <img class="endorsement-icon" src="static/linkedin-images/left-part-images/network-icon.png">
+                                <div class="endorsement">
+                                     1 endorsement
+                                </div>
+                            </div>
+                            <div class="below-activity-title">
+                                Youtube
+                            </div>
+                            <div class="endorsement-row">
+                                <img class="endorsement-icon" src="static/linkedin-images/left-part-images/network-icon.png">
+                                <div class="endorsement">
+                                     1 endorsement
+                                </div>
+                            </div>
+                            <div class="below-activity-title">
+                                Vegas Pro
+                            </div>
+                            <div class="endorsement-row">
+                                <img class="endorsement-icon" src="static/linkedin-images/left-part-images/network-icon.png">
+                                <div class="endorsement">
+                                     1 endorsement
+                                </div>
+                            </div>
+                            <div class="below-activity-title">
+                                Computer-Aided-Design (CAD)
+                            </div>
+                            <div class="endorsement-row">
+                                <img class="endorsement-icon" src="static/linkedin-images/left-part-images/network-icon.png">
+                                <div class="endorsement">
+                                     1 endorsement
+                                </div>
+                            </div>
+                            <div class="below-activity-title">
+                                English
+                            </div>
+                            <div class="endorsement-row">
+                                <img class="endorsement-icon" src="static/linkedin-images/left-part-images/network-icon.png">
+                                <div class="endorsement">
+                                     1 endorsement
+                                </div>
+                            </div>
+                            <div class="below-activity-title">
+                                Technical Documentation
+                            </div>
+                            <div class="endorsement-row">
+                                <img class="endorsement-icon" src="static/linkedin-images/left-part-images/network-icon.png">
+                                <div class="endorsement">
+                                     1 endorsement
+                                </div>
+                            </div>
+                            <div class="below-activity-title">
+                                Python (Programming Language)
+                            </div>
+                            <div class="endorsement-row">
+                                <img class="endorsement-icon" src="static/linkedin-images/left-part-images/network-icon.png">
+                                <div class="endorsement">
+                                     1 endorsement
+                                </div>
+                            </div>
+                            <div class="below-activity-title">
+                                Flask
+                            </div>
+                            <div class="endorsement-row">
+                                <img class="endorsement-icon" src="static/linkedin-images/left-part-images/network-icon.png">
+                                <div class="endorsement">
+                                     1 endorsement
+                                </div>
+                            </div>
+                            <div class="below-activity-title">
+                                HTML
+                            </div>
+                            <div class="endorsement-row">
+                                <img class="endorsement-icon" src="static/linkedin-images/left-part-images/network-icon.png">
+                                <div class="endorsement">
+                                     1 endorsement
+                                </div>
+                            </div>
+                            <div class="below-activity-title">
+                                Cascading Style Sheet (CSS)
+                            </div>
+                            <div class="endorsement-row">
+                                <img class="endorsement-icon" src="static/linkedin-images/left-part-images/network-icon.png">
+                                <div class="endorsement">
+                                     1 endorsement
+                                </div>
+                            </div>
+
+
+
+                    </div>
+                </div>
+
             </div>
 
 
