--- a/website/templates/linkedin.html
+++ b/website/templates/linkedin.html
@@ -4,7 +4,6 @@
     <link rel="stylesheet" href="static/linkedin-css/linkedin-header.css">
     <link rel="stylesheet" href="static/linkedin-css/linkedin-left-part.css">
     <link rel="stylesheet" href="static/linkedin-css/linkedin-right-part.css">
-    <link rel="stylesheet" href="static/cv.css">
 
 
 </head>
@@ -421,15 +420,30 @@
                       </div>
                     </div>
                 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
                 <div class="left-part9">
+                <div class="activity-and-button">
+                    <button class="demonstrate-button">
+                        <div class="start-a-post-text">Demonstrate skills</div>
+                    </button>
+                </div>
                     <div class="expand">
-                    <div class="activity-and-button">
                         <input class="box" type="checkbox" id="trigger"/>
                         <label for="trigger" >Skills</label>
-                                <button class="demonstrate-button">
-                                    <div class="start-a-post-text">Demonstrate skills</div>
-                                </button>
-                    </div>
+                            <div class="all-text">
                             <div class="below-activity-title">
                                 Engineering
                             </div>
@@ -556,13 +570,21 @@
                                      1 endorsement
                                 </div>
                             </div>
-
-
+                            </div>
 
                     </div>
+
                 </div>
 
-            </div>
+
+
+
+
+
+
+
+
+        </div>
 
 
             <div class="right-part">
