--- a/website/static/linkedin-css/linkedin-header.css
+++ b/website/static/linkedin-css/linkedin-header.css
@@ -9,7 +9,7 @@ body{
     flex-direction: row;
     width: 100%;
     height: 53px;
-    background-color: rgb(238, 243, 248);
+    background-color: white;
     z-index: 1000;
 }
 .linkedin-logo{
@@ -46,7 +46,7 @@ body{
     width: 33px;
     height: 35px;
     margin-left: 6px;
-    background-color: rgb(201, 217, 233);
+    background-color: white;
     border: none;
     outline: none;
     margin-top: 10px;
@@ -65,7 +65,7 @@ body{
 .work-button{
     height: 44px;
     margin: 4.5px 0 0 170px;
-    background-color: rgb(238, 243, 248);
+    background-color: white;
     border:none;
 }
 .home-logo{
