New update with only few steps left until the finish product

--- a/website/static/linkedin-css/linkedin-header.css
+++ b/website/static/linkedin-css/linkedin-header.css
@@ -67,6 +67,7 @@ body{
     margin: 4.5px 0 0 170px;
     background-color: white;
     border:none;
+    background-color: white;
 }
 .home-logo{
     height: 25px;
@@ -94,4 +95,40 @@ body{
     text-decoration: underline;
     margin: 2px;
     padding-top: 2px;
+}
+.network-button1{
+    display: flex;
+    flex-direction: column;
+    height: 28px;
+    margin: 4.5px 0 0 20px;
+    background-color: white;
+    border:none;
+
+}
+.home-text1{
+    font-family: Roboto, Arial;
+    font-size: 13px;
+    margin-top: -30px;
+    color: rgb(128, 128, 128);
+    z-index: 100;
+    margin-left: 15px;
+    background-color: white;
+    border:none;
+    outline: none;
+    cursor:pointer;
+
+}
+.home-logo1{
+    height: 25px;
+}
+.dropdown{
+    position: relative;
+    display: inline-block;
+}
+.dropdown-content{
+    display: none;
+    position: absolute;
+    min-width: 160px;
+    overflow: auto;
+    box-shadow: 0 8px 16px 0;
 }
