--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -18,9 +18,12 @@
                 <input class="login-tab" type="password" id="lozinka" name="lozinka" placeholder="Vaša lozinka">
              </div>
              <button class="login-button">PRIJAVA</button>
-             <div class="profile">Niste jos registrovani?
+            <div>
+                 <div class="profile">Niste jos registrovani?
                  <a class="text-edit" href="/register">Otvorite nalog</a>
-             </div>
+                </div>
+            </div>
+
         </form>
         </div>
     </div>
