--- a/website/templates/mpismo.html
+++ b/website/templates/mpismo.html
@@ -45,6 +45,15 @@
     </div>
     <div class="full-text">
       <p class="text-edit"> Motivaciono pismo </p>
+      <div>
+        Vjerujem da me moja poslovna iskustva kao i karakterne osobine čine izvrsnim kandidatom za poziciju investicijskog brokera u vašoj tvrtki.
+Upravo sam završio magisterij ekonomije, smjer Tržište i marketing na Ekonomskom fakultetu u Sarajevu. Tokom studija bio sam predsjednik studentskog marketinškog društva Budući lideri u gospodarstvu.
+Nisam tipičan novopečeni magistar. Dio studija proveo sam u SAD-u, tokom studija radio sam kao agent za radio oglase, također sam se bavio prodajom pretplate za poznate dnevne novine.
+Želim razvijati svoju karijeru u području investicija. Spreman sam i lično  porazgovarati o poziciji u vašoj tvrtki. Stoga ću vas nazvati da dogovorim termin sastanka.
+
+Hvala vam za vaše vrijeme.
+
+      </div>
     </div>
     </div>
    </div>
