--- a/website/templates/linkedin.html
+++ b/website/templates/linkedin.html
@@ -52,14 +52,15 @@
                 </button>
             </div>
             <div>
-                <button class="network-button">
-                    <img class="me-logo" src="static/linkedin-images/header-images/me-logo.jfif">
-                    <p class="home-text">Me &#x25BC;</p>
-                </button>
+                    <button class="network-button1">
+                    <img class="me-logo" src="static/linkedin-images/header-images/profile-photo.jfif">
+                        <button class="home-text1">Me &#x25BC;</button>
+
+                    </button>
             </div>
             <div>
                 <button class="work-button">
-                    <img class="home-logo" src="static/linkedin-images/header-images/work-logo.png">
+                    <img class="home-logo1" src="static/linkedin-images/header-images/work-logo.png">
                     <p class="home-text">Work &#x25BC;</p>
                 </button>
             </div>
@@ -420,20 +421,6 @@
                       </div>
                     </div>
                 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
                 <div class="left-part9">
                 <div class="activity-and-button">
                     <button class="demonstrate-button">
@@ -571,22 +558,9 @@
                                 </div>
                             </div>
                             </div>
-
                     </div>
-
                 </div>
-
-
-
-
-
-
-
-
-
         </div>
-
-
             <div class="right-part">
                 <div class="right-part1">
                     <div class="text-and-question">
